--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <br>
         <a href="https://ororomohawk.bandcamp.com/">Ororo Mohawk (Electronic Rap)</a>
         <br>
-        <img src="images/sunset laughter.png" alt="floaty feelings" height="180" width="306">
+        <img src="images/sunset_laughter.png" alt="floaty feelings" height="180" width="306">
         <br>
         <a href="https://soundcloud.com/alex-mystery-summers-weird/sunset-laughter">Sunset Laughter</a>
         <br>
